# Phylogenetic_comps

./: README.md
coding/PrimateSequences/DataGenerator/: DataGenerator.java  Gene.java  Species.java
coding/PrimateSequences/GenbankData/: AlouattaCaraya.gb  AotusNancymaae.gb  AtelesBelzebuth.gb  AvahiLaniger.gb  CacajaoCalvus.gb  CallicebusCupreus.gb  CallithrixPygmaea.gb  CebusXanthosternos.gb  CercocebusChrysogaster.gb  CercopithecusAlbogularis.gb  CheirogaleusMedius.gb  ChiropotesAlbinasus.gb  ChlorocebusAethiops.gb  ColobusGuereza.gb  DaubentoniaMadagascariensis.gb  ErythrocebusPatas.gb  GalagoSenegalensis.gb  (+36 more)
coding/generatedData/: 1-5-50-0.0001.txt  50.txt  RealData.txt  handData.txt
coding/parallelPhylo/: CMakeLists.txt  main.cpp  main.h  options.txt
coding/parallelPhylo/sequenceAligners/: CMakeLists.txt  abstractAligner.h  clustalWOMP.cpp  clustalWOMP.h  clustalWParallel.cpp  clustalWParallel.h
coding/parallelPhylo/treeBuilders/: CMakeLists.txt  abstractTreeBuilder.h  maximumLikelihoodClimb.cpp  maximumLikelihoodClimb.h  maximumParsimonyParallel.cpp  maximumParsimonyParallel.h  neighborJoining.cpp  neighborJoining.h  tree.cpp  tree.h
coding/parallelPhylo/util/: CMakeLists.txt  distanceMatrix.cpp  distanceMatrix.h  mutationMap.cpp  mutationMap.h  options.cpp  options.h  parallelUtils.cpp  parallelUtils.h  parallelUtilsOMP.cpp  parallelUtilsOMP.h  sequenceData.cpp  sequenceData.h  species.cpp  species.h
coding/phylo/: 50.aln  CMakeLists.txt  README  analysisMain.cpp  clustalW.aln  howToVisualize.txt  labMachineInfo.txt  main.cpp  main.h  options.txt  submit.py
coding/phylo/treeBuilders/: CMakeLists.txt  abstractTreeBuilder.h  apeTreeBuilder.cpp  apeTreeBuilder.h  maximumLikelihoodClimb.cpp  maximumLikelihoodClimb.h  maximumLikelihoodProg.cpp  maximumLikelihoodProg.h  maximumParsimonyClimb.cpp  maximumParsimonyClimb.h  maximumParsimonyProg.cpp  maximumParsimonyProg.h  monteCarlo.cpp  monteCarlo.h  neighborJoining.cpp  neighborJoining.h  tree.cpp  tree.h
coding/randomDataGenerator/: CMakeLists.txt  README  generate.sh  main.cpp  main.h  randomDataGenerator.cpp  randomDataGenerator.h
temp/: realrand5ppl.txt  realrand5qd.txt  realrand8qd.txt
writing/algorithms/: algorithms.tex  refs.bib
writing/dataPlan/: dataPlan.tex
writing/finalPaper/: refs.bib  simpleConference.sty  templatePDF.tex
writing/schedule/: schedule.tex
(+3371 files in other folders)
